--- a/css/fontello.css
+++ b/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?16438141');
-  src: url('../font/fontello.eot?16438141#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?16438141') format('woff2'),
-       url('../font/fontello.woff?16438141') format('woff'),
-       url('../font/fontello.ttf?16438141') format('truetype'),
-       url('../font/fontello.svg?16438141#fontello') format('svg');
+  src: url('../font/fontello.eot?54883123');
+  src: url('../font/fontello.eot?54883123#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?54883123') format('woff2'),
+       url('../font/fontello.woff?54883123') format('woff'),
+       url('../font/fontello.ttf?54883123') format('truetype'),
+       url('../font/fontello.svg?54883123#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?16438141#fontello') format('svg');
+    src: url('../font/fontello.svg?54883123#fontello') format('svg');
   }
 }
 */
@@ -29,7 +29,7 @@
   display: inline-block;
   text-decoration: inherit;
   width: 1em;
-  /*margin-right: .2em;*/
+  margin-right: .2em;
   text-align: center;
   /* opacity: .8; */
 
@@ -42,7 +42,7 @@
 
   /* Animation center compensation - margins should be symmetric */
   /* remove if not needed */
-  /*margin-left: .2em;*/
+  margin-left: .2em;
 
   /* you can be more comfortable with increased icons size */
   /* font-size: 120%; */
@@ -55,5 +55,5 @@
   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
 
-.slickity-icon-left-open:before { content: '\e800'; } /* '' */
-.slickity-icon-right-open:before { content: '\e801'; } /* '' */
+.slickity-icon-left-open-big:before { content: '\e802'; } /* '' */
+.slickity-icon-right-open-big:before { content: '\e803'; } /* '' */
