--- a/public/css/slick-templates.css
+++ b/public/css/slick-templates.css
@@ -68,6 +68,7 @@
 
 .slickity-slide-template--default .slickity-slide-template__caption {
   bottom: 0;
+  font-size: .85rem;
   left: 0;
   padding: 1rem;
   position: absolute;
